@@ -9,6 +9,7 @@ OpenZXRom 2008-xx-xx
   'putchar' updated to support FLASH/BRIGHT 8 (transparent)
 - Tape loader outputs an extra newline when the matching block is found
 - Workspace / calculator stack is garbage-collected before each statement
+- Added 0x053f as an alternate entry point to load_bytes_exit
 - Bugfix: PRINT TAB x no longer moves to the next line if cursor is already at
   position x. (Also affected PRINT AT y,0)
 
